# sinter

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  GUIDE.md  README.md  biome.json  package.json  rslib.config.ts  tsconfig.json
assets/test/: test.HEIC  test.avif
src/: compress.worker.ts  index.ts  utils.ts
src/archived/: index.ts  utils.ts  worker.ts
src/engines/decode/: ts-index.ts  ts-loader.ts  ts-memory.ts  ts-struct.ts  wasm-avif-decode.c
wasm/: Cargo.toml
wasm/jpeg/: README.md  decode.c  encode.c
wasm/src/: constants.rs  error.rs  exif.rs  format.rs  lib.rs  resize.rs
wasm/src/formats/: avif.rs  jpeg.rs  mod.rs  png.rs  webp.rs
wasm/tests/: avif_tests.rs
