[package]
name = "sinter-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
