[package]
name = "sinter-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Image processing - decode/encode + resize (built-in)
# Note: webp feature excluded due to native libwebp-sys incompatibility with WASM
image = { version = "0.25", features = ["jpeg", "png"] }

# AVIF support
ravif = "0.12"  # Encoding
y4m = "0.8"
rgb = "0.8"
libavif-image = "0.14"  # Decoding (requires dav1d)

# EXIF handling
img-parts = "0.3"

# Error handling
thiserror = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
